--- a/carrinho.html
+++ b/carrinho.html
@@ -105,7 +105,7 @@
     <td>
       <input type="number" value="1" min="0" class="atualiza_quant">
     </td>
-    
+    <!-- arquivo modificado -->
     
   </body>
 </html>
